project/force-app/main/default/objects/Action_Plan_Detail__c/Action_Plan_Detail__c.object-meta.xml
<CustomObject>
    <label>Action Plan Detail</label>
    <pluralLabel>Action Plan Details</pluralLabel>
    <nameField>
        <label>Action Plan Detail Name</label>
        <type>AutoNumber</type>
        <displayFormat>APD-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>