project/force-app/main/default/objects/Action_Plan_Detail__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <type>Lookup</type>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Action Plan Details</relationshipLabel>
    <relationshipName>Action_Plan_Details</relationshipName>
</CustomField>