project/force-app/main/default/objects/Action_Plan_Detail__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Estimate in hours</description>
</CustomField>