project/force-app/main/default/objects/Action_Plan_Detail__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <label>PIC</label>
    <type>Text</type>
    <length>255</length>
    <description>Queue Name or User Name assigned to this task</description>
</CustomField>