project/force-app/main/default/objects/Action_Plan_Detail__c/fields/Validate_Complete_Task__c.field-meta.xml
<CustomField>
    <fullName>Validate_Complete_Task__c</fullName>
    <label>Validate Complete Task</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Update Document</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Input Data</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>